--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -26,7 +26,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: time.handler
-      CodeUri: lambda/time.py
+      CodeUri: lambda/get_time.py
       Runtime: python3.7
       Policies: AWSLambdaBasicExecutionRole
       Events:
