--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -25,7 +25,7 @@ Resources:
   TimeFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: time.handler
+      Handler: get_time.handler
       CodeUri: lambda/get_time.py
       Runtime: python3.7
       Policies: AWSLambdaBasicExecutionRole
