Fix capitalization on call to `!Sub`

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -27,7 +27,7 @@ Resources:
   BrwyattApiLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
-      LayerName: !sub 'Brwyatt-API-${Stage}'
+      LayerName: !Sub 'Brwyatt-API-${Stage}'
       Description: Code for api.brwyatt.net
       ContentUri: build/
       RetentionPolicy: Retain
