Set common name for API Gateway resource

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -21,6 +21,7 @@ Resources:
   BrwyattApiGateway:
     Type: AWS::Serverless::Api
     Properties:
+      Name: Brwyatt-API
       StageName: !Ref Stage
       Variables:
         Stage: !Ref Stage
