--- a/serverless-pipeline.yaml
+++ b/serverless-pipeline.yaml
@@ -170,7 +170,7 @@ Resources:
                 Provider: GitHub
                 Version: 1
               Configuration:
-                RepositoryName: !Ref GitHubUser
+                Owner: !Ref GitHubUser
                 Repo: !Ref GitHubRepoName
                 Branch: !Ref GitHubRepoBranch
                 OAuthToken: !Ref GitHubToken
