Fix basepath mapping for API on the web domain

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -64,7 +64,7 @@ Resources:
     Type: AWS::ApiGateway::BasePathMapping
     DependsOn: BrwyattApiStage
     Properties:
-      BasePath: '/api'
+      BasePath: 'api'
       DomainName: !Ref WebDomain
       RestApiId: !Ref BrwyattApi
       Stage: !Ref Stage
