Add buildstep to gather static assets together
This just moves it down a level so we have `/opt/static/{css,js}`
instead of `/opt/{css,js}`.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -84,7 +84,7 @@ Resources:
     Properties:
       LayerName: !Sub 'BrwyattStatic-${Stage}'
       Description: Static code assets for brwyatt.net - CSS, JS
-      ContentUri: static/
+      ContentUri: staticbuild/
       RetentionPolicy: Delete
       CompatibleRuntimes:
         - python3.7
