--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -33,6 +33,7 @@ Resources:
       StageName: !Ref Stage
       Variables:
         Stage: !Ref Stage
+        HostName: !Ref WebDomain
 
   WebMapping:
     Type: AWS::ApiGateway::BasePathMapping
@@ -59,6 +60,7 @@ Resources:
       StageName: !Ref Stage
       Variables:
         Stage: !Ref Stage
+        HostName: !Ref ApiDomain
 
   ApiMapping:
     Type: AWS::ApiGateway::BasePathMapping
