--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,10 @@ phases:
   pre_build:
     commands:
       - echo "Running pre-build"
-      - ./bin/build.sh
+      - which sh
+      - which bash
+      - which ./bin/build.sh
+      - sh bin/build.sh
   build:
     commands:
       - echo "Starting CloudFormation package build"
