Add CORS to Lambda API GET response
Browser was really unhappy...

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -123,6 +123,7 @@ Resources:
       Environment:
         Variables:
           TEMPLATE_PATH: '/opt/templates'
+          WEB_DOMAIN: !Ref WebDomain
       Events:
         PageContent:
           Type: Api
