Remove www mapping and add S3 bucket for redirects
This will let us use the S3 bucket (and CloudFront in front of it, with
the proper certs) to redirect to the main web domain. This will mean we
never have to worry about issues with CORS from multiple domains, or
worry about defining/creating individual mappings for each supported
domain.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -45,24 +45,6 @@ Resources:
         Stage: !Ref Stage
         HostName: !Ref WebDomain
 
-  WebMapping:
-    Type: AWS::ApiGateway::BasePathMapping
-    DependsOn: BrwyattWebStage
-    Properties:
-      BasePath: ''
-      DomainName: !Ref WebDomain
-      RestApiId: !Ref BrwyattWeb
-      Stage: !Ref Stage
-
-  WebMappingWww:
-    Type: AWS::ApiGateway::BasePathMapping
-    DependsOn: BrwyattWebStage
-    Properties:
-      BasePath: ''
-      DomainName: !Sub 'www.${WebDomain}'
-      RestApiId: !Ref BrwyattWeb
-      Stage: !Ref Stage
-
   BrwyattApi:
     Type: AWS::Serverless::Api
     Properties:
@@ -75,6 +57,15 @@ Resources:
         Stage: !Ref Stage
         HostName: !Ref ApiDomain
 
+  WebMapping:
+    Type: AWS::ApiGateway::BasePathMapping
+    DependsOn: BrwyattWebStage
+    Properties:
+      BasePath: ''
+      DomainName: !Ref WebDomain
+      RestApiId: !Ref BrwyattWeb
+      Stage: !Ref Stage
+
   ApiMapping:
     Type: AWS::ApiGateway::BasePathMapping
     DependsOn: BrwyattApiStage
@@ -83,6 +74,15 @@ Resources:
       DomainName: !Ref ApiDomain
       RestApiId: !Ref BrwyattApi
       Stage: !Ref Stage
+
+  AltNameWebRedirectBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Sub 'Brwyatt-Web-Redirector-${Stage}'
+      WebsiteConfiguration:
+        RedirectAllRequestsTo:
+          HostName: !Ref WebDomain
+          Protocol: 'https'
 
   BrwyattLayer:
     Type: AWS::Serverless::LayerVersion
