Fix "Bucket name should not contain uppercase characters"
It shouldn't freakin' matter. This should literally be treated as
case-insensitive, but it isn't. It wouldn't be a problem if
CloudFormation supported built-in functions to lower-case strings.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -78,7 +78,7 @@ Resources:
   AltNameWebRedirectBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub 'Brwyatt-Web-Redirector-${Stage}'
+      BucketName: !Sub '${WebDomain}-redirector'
       WebsiteConfiguration:
         RedirectAllRequestsTo:
           HostName: !Ref WebDomain
