Enable binary media types in API Gateway
Well... this is definitely a weird one...

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -41,6 +41,8 @@ Resources:
     Properties:
       Name: !Sub 'Brwyatt-Web-${Stage}'
       StageName: !Ref Stage
+      BinaryMediaTypes:
+        - 'image~1vnd.microsoft.icon'
       Variables:
         Stage: !Ref Stage
         HostName: !Ref WebDomain
