Static renderer uses the templates for error codes
Originally didn't include the templates layer, as it didn't use them,
but now it does.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -167,6 +167,7 @@ Resources:
       CodeUri: lambda/web/fetch_static.py
       Policies: AWSLambdaBasicExecutionRole
       Layers:
+        - !Ref BrwyattTemplatesLayer
         - !Ref BrwyattStaticLayer
       Environment:
         Variables:
