Add templates to static renderer
... trying this again.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -168,9 +168,11 @@ Resources:
       Policies: AWSLambdaBasicExecutionRole
       Layers:
         - !Ref BrwyattStaticLayer
+        - !Ref BrwyattTemplatesLayer
       Environment:
         Variables:
           STATIC_PATH: '/opt/static'
+          TEMPLATE_PATH: '/opt/templates'
       Events:
         css:
           Type: Api
