Fix name of the templates layer
It had the same name as the static layer. Oops.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -109,7 +109,7 @@ Resources:
   BrwyattTemplatesLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
-      LayerName: !Sub 'BrwyattStatic-${Stage}'
+      LayerName: !Sub 'BrwyattTemplates-${Stage}'
       Description: Jinja2 Templates for brwyatt.net
       ContentUri: templatesbuild/
       RetentionPolicy: Delete
