Standardize on "resource" instead of "proxy"
Makes a little more sense in context.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -157,7 +157,7 @@ Resources:
           Type: Api
           Properties:
             RestApiId: !Ref BrwyattWeb
-            Path: '/{proxy+}'
+            Path: '/{resource+}'
             Method: GET
 
   StaticContent:
