Revert "Remove / resource and just use a collector"
This reverts commit 19f13e62d8d7191318634fa33f236dee911ffc30.

Turns out, this doesn't work. Gotta always have a / at the start.

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -147,11 +147,17 @@ Resources:
         Variables:
           TEMPLATE_PATH: '/opt/templates'
       Events:
-        default:
+        root:
           Type: Api
           Properties:
             RestApiId: !Ref BrwyattWeb
-            Path: '{resource+}'
+            Path: '/'
+            Method: GET
+        proxy:
+          Type: Api
+          Properties:
+            RestApiId: !Ref BrwyattWeb
+            Path: '/{resource+}'
             Method: GET
 
   StaticContent:
