Dynamically add static routes to SAM template
Kinda a cheat, but I don't want to be maintaining this list in 2 places.
While I would have rather just loaded the YAML and modified it, the
loader stumbles over the CFN functions/references and I couldn't find an
acceptible way to get it to work and output valid data.

--- a/app-sam-template.yaml
+++ b/app-sam-template.yaml
@@ -174,36 +174,7 @@ Resources:
           STATIC_PATH: '/opt/static'
           TEMPLATE_PATH: '/opt/templates'
       Events:
-        css:
-          Type: Api
-          Properties:
-            RestApiId: !Ref BrwyattWeb
-            Path: '/css/{resource+}'
-            Method: GET
-        js:
-          Type: Api
-          Properties:
-            RestApiId: !Ref BrwyattWeb
-            Path: '/js/{resource+}'
-            Method: GET
-        favicon:
-          Type: Api
-          Properties:
-            RestApiId: !Ref BrwyattWeb
-            Path: '/favicon.ico'
-            Method: GET
-        keybase:
-          Type: Api
-          Properties:
-            RestApiId: !Ref BrwyattWeb
-            Path: '/keybase.txt'
-            Method: GET
-        robots:
-          Type: Api
-          Properties:
-            RestApiId: !Ref BrwyattWeb
-            Path: '/robots.txt'
-            Method: GET
+        {{static_events}}
 
 Outputs:
   ApiUrl:
